Resolves #13 Implement Author Collection and API
